tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_lamport_transfer.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "2iXDQnRbAJhEhFnz8ZkNjV3h45ATCQYKiyytCwpKg9z1",
        "address": null,
        "data": "",
        "owner": "H9umPt6hyzWn5pXDRMzy3ZuJXDqVMTK4Dvps4qY5XeTX",
        "lamports": 0,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "seq": 1,
        "slotUpdated": 0
      }
    ]
  }
}
