tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-bob-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "account": {
          "hash": "26FEoLQ2nW736yXrKhPgTccnnEMogKA7XpaARLwK4a8Z",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mPfFaIduvOirY3RMtXeXQWWVc88Z9/F1XC0wBqesWSApYVMyW7bfIGTZyxDSp2Oafzqj5mojZDzaWP/V2CCPcwUAAAAAAAAAAAAA",
            "dataHash": "2SpuyyEYZjcqMrEQ7SYRicMXRfyMBLDbmAGVZvSMPFBE"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 6,
          "seq": 7,
          "slotCreated": 0
        },
        "tokenData": {
          "mint": "BJ86ojfyha7r9EhDBxs43uSdxjdePz3dWfU1sU2oYeSj",
          "owner": "3nXnqdxiQQBBuFfCZMcpHuUcaYqSiSVWr33mmJ3dyCwk",
          "amount": 5,
          "delegate": null,
          "state": "initialized",
          "isNative": null
        }
      },
      {
        "account": {
          "hash": "44Qv4BgzziuHPN3PWaY1RjG6r3Js3ewXuTkWF6DxCpQz",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mPfFaIduvOirY3RMtXeXQWWVc88Z9/F1XC0wBqesWSApYVMyW7bfIGTZyxDSp2Oafzqj5mojZDzaWP/V2CCPc2QAAAAAAAAAAAAA",
            "dataHash": "2pBbg1nDKCCG7GE1JUgASMYVp6y7AgZPmNoFKfCzoL5H"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 3,
          "seq": 4,
          "slotCreated": 0
        },
        "tokenData": {
          "mint": "BJ86ojfyha7r9EhDBxs43uSdxjdePz3dWfU1sU2oYeSj",
          "owner": "3nXnqdxiQQBBuFfCZMcpHuUcaYqSiSVWr33mmJ3dyCwk",
          "amount": 100,
          "delegate": null,
          "state": "initialized",
          "isNative": null
        }
      }
    ],
    "cursor": null
  }
}
