tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-bob-token-balances.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: token_balances
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "token_balances": [
      {
        "mint": "CXQYfFDoNQaDZTZGJpmATiXNddWBM7mS3ZgeWmoE8vD8",
        "balance": 105
      }
    ],
    "cursor": null
  }
}
