tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-bob-token-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "46VP2T7zPwcFJzU3HDjCh5PWwxKP9LahgGbPQcsePXUwhFrFa2wHCEh4kDu4KCv18BtCw5RxauJt832DmbF4dUPt",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "2QN6Z3AiG73zWw8KgLH9mL1emTHD1cKypzD62SBSDZzLH2UhuHsPsmzeDB9uXyR2qhxbNS6WFCF11TPFgTUux6H2",
    "slot": 0,
    "blockTime": 0
  }
]
