tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-bob-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "compressedProof": {
    "a": [],
    "b": [],
    "c": []
  },
  "roots": [
    "2z8QTsjDzaEFmSnDoVnLSJFTXm6gui7QLVM9ZNFavc9j",
    "2z8QTsjDzaEFmSnDoVnLSJFTXm6gui7QLVM9ZNFavc9j"
  ],
  "rootIndices": [
    7,
    7
  ],
  "leafIndices": [
    3,
    6
  ],
  "leaves": [
    "6vKDqPoxbJXGVUJgp3N2L6Qeg3cUHrnZ7S3yoTgPBzL",
    "XwKNKiUyu9rbYsnjDcKA2Pf9NJ1RvHxwJyi5tzTTuvK"
  ],
  "merkleTrees": [
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W"
  ]
}
