tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-charles-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "3WCurN17webNLBJqAgCpjPjJbgWvAPnzXzxU2vEjS4YV",
        "address": null,
        "owner": "FjLHdH44f8uN3kxrnxEuuLyLqeR7mp6jZ4d8NT3bk5os",
        "mint": "6VjSatiqNLk7j52hfQmRY7vari3FLanqZBgE8AY7ocQs",
        "amount": 700,
        "delegate": null,
        "isNative": false,
        "closeAuthority": null,
        "frozen": false,
        "data": [
          81,
          166,
          175,
          131,
          142,
          184,
          216,
          25,
          84,
          210,
          172,
          221,
          28,
          219,
          211,
          195,
          150,
          227,
          36,
          246,
          163,
          222,
          203,
          37,
          207,
          163,
          51,
          187,
          82,
          84,
          94,
          4,
          218,
          219,
          209,
          132,
          162,
          213,
          38,
          241,
          235,
          221,
          92,
          6,
          253,
          173,
          147,
          89,
          178,
          40,
          117,
          155,
          77,
          127,
          121,
          214,
          102,
          137,
          250,
          37,
          74,
          173,
          133,
          70,
          188,
          2,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0
        ],
        "discriminator": 2,
        "lamports": 0,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "seq": 3
      }
    ]
  }
}
