tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-charles-token-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "5FDV6xrPRyfEUP2Kg7mwZVj34LVEfq9gsrquyFkvmmdPiiEn3Bhd8sTJTe6UhszNHLgwWfV6j9X4rsceL9mNNyRZ",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "2pGQ7MgWuhrKpeSAzs58CXttKDiws33X68hQv4tRm6NUH6JCsCBk5uteNcjt2fXdToYhC6s8b6SDzoXV9CLJTo94",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "DFE7shhwCWd5P14NfA1ELSpd96FaJhBkjSet2Y7t7CtM4oLhP17AYKtyMBjZWi4hgFKvqET8zcAQUDuAC6sARfk",
    "slot": 0,
    "blockTime": 0
  }
]
