tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-charles-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "compressedProof": {
    "a": [],
    "b": [],
    "c": []
  },
  "roots": [
    "2cvmJ3SpPyBHp1HApVescUg8VfKVbjip52frvpdAX7B2",
    "2cvmJ3SpPyBHp1HApVescUg8VfKVbjip52frvpdAX7B2"
  ],
  "rootIndices": [
    7,
    7
  ],
  "leafIndices": [
    5,
    4
  ],
  "leaves": [
    "28wJuAbi54EHkLi7km2yWR5m5bDjYAd4mZpvM7Q6ce8s",
    "3kyJbEwFnwwHtiEZYeP8hLZnjGC1M1ndHkCaGvpSMwkL"
  ],
  "merkleTrees": [
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
    "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W"
  ]
}
